Add collections resource and other minor updates to object storage API.
